src/packages/pgslib/src/par-src/include/io-c.h

void pgslib_dist_int_scalar_c(int *, int *);
void pgslib_dist_double_scalar_c(double *, double *);
void pgslib_dist_log_scalar_c(C_LOG_TYPE *, C_LOG_TYPE *);
void pgslib_dist_int_vector_c(int *, int *, int *, int *);
void pgslib_dist_double_vector_c(double *, int *, double *, int *);
void pgslib_dist_log_vector_c(C_LOG_TYPE *, int *, C_LOG_TYPE *, int *);
void pgslib_collate_int_scalar_c(int *, int *);
void pgslib_collate_double_scalar_c(double *, double *);
void pgslib_collate_log_scalar_c(C_LOG_TYPE *, C_LOG_TYPE *);
void pgslib_collate_int_vector_c(int *, int *, int *, int *);
void pgslib_collate_float_vector_c(float *, int *, float *, int *);
void pgslib_collate_double_vector_c(double *, int *, double *, int *);
void pgslib_collate_log_vector_c(C_LOG_TYPE *, int *, C_LOG_TYPE *, int *);