src/packages/pgslib/src/par-src/include/redux-c.h

/* Include file for reduc-c.c */

/* $Id: redux-c.h,v 1.1.1.1 2000/10/11 22:44:24 ferrell Exp $ */

/* Function prototypes */
void pgslib_global_min_int_c   (int *   );
void pgslib_global_min_double_c(double *);
void pgslib_global_max_int_c   (int *   );
void pgslib_global_max_double_c(double *);