src/packages/pgslib/src/par-src/include/scan.h

void off_node_sum_prefix_int_c   (int *Dest_Data, int *Src_Data, int *Count);
void off_node_sum_prefix_float_c (float *Dest_Data, float *Src_Data, int *Count);
void off_node_sum_prefix_double_c(double *Dest_Data, double *Src_Data, int *Count);
void off_node_sum_suffix_int_c   (int *Dest_Data, int *Src_Data, int *Count);
void off_node_sum_suffix_float_c (float *Dest_Data, float *Src_Data, int *Count);
void off_node_sum_suffix_double_c(double *Dest_Data, double *Src_Data, int *Count);