src/packages/pgslib/src/interface/pgslib_c_binding.f90


  !! Functions from par-src/io/io-c.c
  interface PGSLib_Collate_Scalar_C ! SEE NOTE 3
    subroutine PGSLib_Collate_int_scalar_c (scalarv_out, scalar_in) &
        bind(c, name="pgslib_collate_int_scalar_c")
      import c_int
      integer(c_int), intent(out) :: scalarv_out(*)
      integer(c_int), intent(in)  :: scalar_in
    end subroutine
    subroutine PGSLib_Collate_float_scalar_c (scalarv_out, scalar_in) &
        bind(c, name="pgslib_collate_float_scalar_c")
      import c_float
      real(c_float), intent(out) :: scalarv_out(*)
      real(c_float), intent(in)  :: scalar_in
    end subroutine
    subroutine PGSLib_Collate_double_scalar_c (scalarv_out, scalar_in) &
        bind(c, name="pgslib_collate_double_scalar_c")
      import c_double
      real(c_double), intent(out) :: scalarv_out(*)
      real(c_double), intent(in)  :: scalar_in
    end subroutine
    subroutine PGSLib_Collate_log_scalar_c (scalarv_out, scalar_in) &
        bind(c, name="pgslib_collate_log_scalar_c")
      import c_int
      logical(c_int), intent(out) :: scalarv_out(*) ! A LIE: SEE NOTE 1
      logical(c_int), intent(in)  :: scalar_in      ! A LIE: SEE NOTE 1
    end subroutine
  end interface
  private :: PGSLib_Collate_int_scalar_c, PGSLib_Collate_float_scalar_c, &
             PGSLib_Collate_double_scalar_c, PGSLib_Collate_log_scalar_c

  !! Functions from par-src/io/io-c.c
  interface PGSLib_Collate_Vector_c ! SEE NOTE 3
    subroutine PGSLib_Collate_int_vector_c (vector_out, Lengths, vector_in, In_Length) &
        bind(c, name="pgslib_collate_int_vector_c")
      import c_int
      integer(c_int), intent(out) :: vector_out(*)
      integer(c_int), intent(in)  :: vector_in(*)
      integer(c_int), intent(in)  :: Lengths(*), In_Length
    end subroutine
    subroutine PGSLib_Collate_float_vector_c (vector_out, Lengths, vector_in, In_Length) &
        bind(c, name="pgslib_collate_float_vector_c")
      import c_int, c_float
      real(c_float),  intent(out) :: vector_out(*)
      real(c_float),  intent(in)  :: vector_in(*)
      integer(c_int), intent(in)  :: Lengths(*), In_Length
    end subroutine
    subroutine PGSLib_Collate_double_vector_c (vector_out, Lengths, vector_in, In_Length) &
        bind(c, name="pgslib_collate_double_vector_c")
      import c_int, c_double
      real(c_double), intent(out) :: vector_out(*)
      real(c_double), intent(in)  :: vector_in(*)
      integer(c_int), intent(in)  :: Lengths(*), In_Length
    end subroutine
    subroutine PGSLib_Collate_log_vector_c (vector_out, Lengths, vector_in, In_Length) &
        bind(c, name="pgslib_collate_log_vector_c")
      import c_int
      logical(c_int), intent(out) :: vector_out(*) ! A LIE: SEE NOTE 1
      logical(c_int), intent(in)  :: vector_in(*)  ! A LIE: SEE NOTE 1
      integer(c_int), intent(in)  :: Lengths(*), In_Length
    end subroutine
    subroutine PGSLib_Collate_char_vector_c (vector_out, Lengths, vector_in, In_Length) &
        bind(c, name="pgslib_collate_char_vector_c")
      import c_int, c_char
      character(kind=c_char), intent(out) :: vector_out(*)
      character(kind=c_char), intent(in)  :: vector_in(*)
      integer(c_int), intent(in) :: Lengths(*), In_Length
    end subroutine
  end interface
  private :: PGSLib_Collate_int_vector_c, PGSLib_Collate_float_vector_c, &
             PGSLib_Collate_double_vector_c, PGSLib_Collate_log_vector_c, &
             PGSLib_Collate_char_vector_c

  !! Functions from par-src/io/io-c.c
  interface PGSLib_Dist_Scalar_c  ! SEE NOTE 3
    subroutine PGSLib_Dist_int_scalar_c (scalar_out, scalarv_in) &
        bind(c, name="pgslib_dist_int_scalar_c")
      import c_int
      integer(c_int), intent(out) :: scalar_out
      integer(c_int), intent(in)  :: scalarv_in(*)
    end subroutine
    subroutine PGSLib_Dist_float_scalar_c (scalar_out, scalarv_in) &
        bind(c, name="pgslib_dist_float_scalar_c")
      import c_float
      real(c_float), intent(out) :: scalar_out
      real(c_float), intent(in)  :: scalarv_in(*)
    end subroutine
    subroutine PGSLib_Dist_double_scalar_c (scalar_out, scalarv_in) &
        bind(c, name="pgslib_dist_double_scalar_c")
      import c_double
      real(c_double), intent(out) :: scalar_out
      real(c_double), intent(in)  :: scalarv_in(*)
    end subroutine
    subroutine PGSLib_Dist_log_scalar_c (scalar_out, scalarv_in) &
        bind(c, name="pgslib_dist_log_scalar_c")
      import c_int
      logical(c_int), intent(out) :: scalar_out    ! A LIE: SEE NOTE 1
      logical(c_int), intent(in)  :: scalarv_in(*) ! A LIE: SEE NOTE 1
    end subroutine
  end interface
  private :: PGSLib_Dist_int_scalar_c, PGSLib_Dist_float_scalar_c, &
             PGSLib_Dist_double_scalar_c, PGSLib_Dist_log_scalar_c

  !! Functions from par-src/io/io-c.c
  interface PGSLib_Dist_Vector_c  ! SEE NOTE 3
    subroutine PGSLib_dist_int_vector_c (vector_out, out_len, vector_in, lengths) &
        bind(c, name="pgslib_dist_int_vector_c")
      import c_int
      integer(c_int), intent(out) :: vector_out(*)
      integer(c_int), intent(in)  :: vector_in(*)
      integer(c_int), intent(in)  :: out_len, lengths(*)
    end subroutine
    subroutine PGSLib_dist_float_vector_c (vector_out, out_len, vector_in, lengths) &
        bind(c, name="pgslib_dist_float_vector_c")
      import c_int, c_float
      real(c_float), intent(out) :: vector_out(*)
      real(c_float), intent(in)  :: vector_in(*)
      integer(c_int), intent(in) :: out_len, lengths(*)
    end subroutine
    subroutine PGSLib_dist_double_vector_c (vector_out, out_len, vector_in, lengths) &
        bind(c, name="pgslib_dist_double_vector_c")
      import c_int, c_double
      real(c_double), intent(out) :: vector_out(*)
      real(c_double), intent(in)  :: vector_in(*)
      integer(c_int), intent(in) :: out_len, lengths(*)
    end subroutine
    subroutine PGSLib_dist_log_vector_c (vector_out, out_len, vector_in, lengths) &
        bind(c, name="pgslib_dist_log_vector_c")
      import c_int
      logical(c_int), intent(out) :: vector_out(*) ! A LIE: SEE NOTE 1
      logical(c_int), intent(in)  :: vector_in(*)  ! A LIE: SEE NOTE 1
      integer(c_int), intent(in)  :: out_len, lengths(*)
    end subroutine
  end interface
  private :: PGSLib_dist_int_vector_c, PGSLib_dist_float_vector_c, &
             PGSLib_dist_double_vector_c, PGSLib_dist_log_vector_c

  !! Functions from par-src/scans/scan-c-*.c
  interface Off_Node_SUM_PREFIX ! SEE NOTE 3
    subroutine Off_Node_SUM_PREFIX_INT_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_prefix_int_c")
      import c_int
      integer(c_int) :: Dest_Data, Dest_Seg, Src_Data, Src_Seg
    end subroutine
    subroutine Off_Node_SUM_PREFIX_FLOAT_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_prefix_float_c")
      import c_int, c_float
      real(c_float) :: Dest_Data, Src_Data
      integer(c_int) :: Dest_Seg, Src_Seg
    end subroutine
    subroutine Off_Node_SUM_PREFIX_DOUBLE_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_prefix_double_c")
      import c_int, c_double
      real(c_double) :: Dest_Data, Src_Data
      integer(c_int) :: Dest_Seg, Src_Seg
    end subroutine
  end interface
  private :: Off_Node_SUM_PREFIX_INT_C, Off_Node_SUM_PREFIX_FLOAT_C, Off_Node_SUM_PREFIX_DOUBLE_C

  !! Functions from par-src/scans/scan-c-*.c
  interface Off_Node_SUM_SUFFIX ! SEE NOTE 3
    subroutine Off_Node_SUM_SUFFIX_INT_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_suffix_int_c")
      import c_int
      integer(c_int) :: Dest_Data, Dest_Seg, Src_Data, Src_Seg
    end subroutine
    subroutine Off_Node_SUM_SUFFIX_FLOAT_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_suffix_float_c")
      import c_int, c_float
      real(c_float) :: Dest_Data, Src_Data
      integer(c_int) :: Dest_Seg, Src_Seg
    end subroutine
    subroutine Off_Node_SUM_SUFFIX_DOUBLE_C (Dest_Data, Dest_Seg, Src_Data, Src_Seg) &
        bind(c, name="off_node_sum_suffix_double_c")
      import c_int, c_double
      real(c_double) :: Dest_Data, Src_Data
      integer(c_int) :: Dest_Seg, Src_Seg
    end subroutine
  end interface
  private :: Off_Node_SUM_SUFFIX_INT_C, Off_Node_SUM_SUFFIX_FLOAT_C, Off_Node_SUM_SUFFIX_DOUBLE_C

  !! Functions from par-src/indexing/index-c.c
  interface
    subroutine PGSLib_Init_Access_Table_C (Access_Table) &
        bind(c, name="pgslib_init_access_table_c")
      import c_ptr
      type(c_ptr) :: Access_Table
    end subroutine
    subroutine PGSLib_Free_Access_Table_C (Access_Table) &
        bind(c, name="pgslib_free_access_table_c")
      import c_ptr
      type(c_ptr) :: Access_Table
    end subroutine
    subroutine PGSLib_Add_Item_To_Table_C (Item, PE, Access_Table, ierror) &
        bind(c, name="pgslib_add_item_to_table_c")
      import c_ptr, c_int
      integer(c_int), intent(in) :: Item, PE
      type(c_ptr) :: Access_Table
      integer(c_int), intent(out) :: ierror
    end subroutine
    subroutine PGSLib_Count_Items_In_Table_C (Count, Access_Table) &
        bind(c, name="pgslib_count_items_in_table_c")
      import c_ptr, c_int
      integer(c_int), intent(out) :: Count
      type(c_ptr) :: Access_Table
    end subroutine
    subroutine PGSLib_Items_From_Table_C (Items, PEs, Count, Access_Table, ierror) &
        bind(c, name="pgslib_items_from_table_c")
      import c_ptr, c_int
      integer(c_int), intent(out) :: Items(*), PEs(*), ierror
      integer(c_int), intent(in)  :: Count
      type(c_ptr) :: Access_Table
    end subroutine
    subroutine PGSLib_Item_Index_From_Table_C (Index, Item, PE, Access_Table) &
        bind(c, name="PGSLib_Item_Index_From_Table_C")
      import c_ptr, c_int
      integer(c_int), intent(out) :: Index
      integer(c_int), intent(in)  :: Item, PE
      type(c_ptr) :: Access_Table
    end subroutine
  end interface

  !! Functions from par-src/reductions/redux-c.c
  interface PGSLib_Global_MIN_c ! SEE NOTE 3
    subroutine PGSLib_global_min_int_c (MinA) &
        bind(c, name="pgslib_global_min_int_c")
      import c_int
      integer(c_int), intent(inout):: MinA
    end subroutine
    subroutine PGSLib_global_min_float_c (MinA) &
        bind(c, name="pgslib_global_min_float_c")
      import c_float
      real(c_float), intent(inout):: MinA
    end subroutine
    subroutine PGSLib_global_min_double_c (MinA) &
        bind(c, name="pgslib_global_min_double_c")
      import c_double
      real(c_double), intent(inout):: MinA
    end subroutine
  end interface
  private :: PGSLib_global_min_int_c, PGSLib_global_min_float_c, PGSLib_global_min_double_c

  !! Functions from par-src/reductions/redux-c.c
  interface PGSLib_Global_MAX_C ! SEE NOTE 3
    subroutine PGSLib_global_max_int_c (MaxA) &
        bind(c, name="pgslib_global_max_int_c")
      import c_int
      integer(c_int), intent(inout):: MaxA
    end subroutine
    subroutine PGSLib_global_max_float_c (MaxA) &
        bind(c, name="pgslib_global_max_float_c")
      import c_float
      real(c_float), intent(inout):: MaxA
    end subroutine
    subroutine PGSLib_global_max_double_c (MaxA) &
        bind(c, name="pgslib_global_max_double_c")
      import c_double
      real(c_double), intent(inout):: MaxA
    end subroutine
  end interface
  private :: PGSLib_global_max_int_c, PGSLib_global_max_float_c, PGSLib_global_max_double_c
